fix right-aligned columns

--- a/static/main.css
+++ b/static/main.css
@@ -1609,7 +1609,7 @@ label {
   text-align: center;
 }
 
-.right {
+.right, th.right {
   text-align: right;
 }
 
